fix: improve sejarah dots visibility on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1409,7 +1409,7 @@ font {
 
     .sejarah,
     .ngaseuk {
-        padding: 80px 0;
+        padding: 80px 0 120px;
         background-attachment: scroll;
     }
 
